--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,14 @@
 [DEFAULT]
-EPOCH_LEN      = 108000
-dataPath    = ./
-trigWidth   = 100
-T_SESSION_START = 255
-T_VID_START = 254
-T_INTERVAL  = 60
-N_EPOCH     = 250
-T_BG        = 0
-PIN         = 0,1,2,3,4,5,6,7
+EPOCH_LEN           = 108000
+dataPath            = ./data/
+trigWidth           = 50
+T_SESSION_START     = 255
+T_START             = 254
+T_SESSION_END       = 253
+T_INTERVAL          = 30
+N_EPOCH             = 250
+T_BG                = 0
+PIN                 = 0,1,2,3,4,5,6,7
 
 [room130]
 User = 3123
